desenv_tests/test-assets/desenv/failure/desenv_attribute_used_twice_2.rs
use desenv::Desenv;

#[derive(Desenv)]
#[desenv(prefix = "PREFIX_")]
#[desenv(prefix = "PREFIX_")]
struct Config {
    field: String
}

fn main(){}